--- a/examples/index.html
+++ b/examples/index.html
@@ -1,34 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Hello, world!</title>
-    <script src="../dist/vue-applet.min.js"></script>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Vue applet examples</title>
+    <script defer src="../dist/vue-applet.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Vue applet examples</h1>
 
     <div id="app"></div>
 
     <script id="tpl-app" type="text/template">
-      <applet-button @click="++counter">{{ counter }}</applet-button>
+      <p>VueApplet version {{ version }}</p>
+      <p>
+        <applet-input v-model="input1" label="Label text" placeholder="Input anything"></applet-input>
+      </p>
+      <p>
+        Input 1 value: [{{ input1 }}]
+        <applet-button>Click me!</applet-button>
+      <p>
     </script>
 
     <script>
       var vueApplets = vueApplets || [];
       vueApplets.push({
-        app: {
-          template: '#tpl-app',
-          setup() {
-            const { ref } = Vue;
-            const counter = ref(100);
-            return {
-              counter,
-            };
-          },
+        app({ Vue, version }) {
+          return {
+            template: '#tpl-app',
+            setup() {
+              const { ref } = Vue;
+              const input1 = ref();
+              return {
+                version,
+                input1,
+              };
+            },
+          };
         },
         mount: '#app',
       });
